2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Dialogs/ExportProjectToHtmlDialog.cs:
	* InsightWindow/MethodInsightDataProvider.cs:
	* InsightWindow/InsightWindow.cs:
	* InsightWindow/IInsightDataProvider.cs:
	* InsightWindow/IndexerInsightDataProvider.cs:
	* CodeCompletion/CompletionListWindow.cs
	* CodeCompletion/CompletionWindow.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs: 
	* CodeCompletion/ICompletionDataProvider.cs:
	* CodeCompletion/CodeCompletionDataProvider.cs: 
	* CodeCompletion/TemplateCompletionDataProvider.cs:
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs:
	  Follow architecture changes.

2004-12-14  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Finish off some code to detect
	if a source file is changed externally, so it can be reloaded.

2004-12-14  Todd Berman  <tberman@off.net>
	
	* Gui/SourceEditorBuffer.cs: Single line commenting changed a bit.
	Fixed bug #70574.

2004-12-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Search/SearchReplaceUtilities.cs: 
	* Search/SearchStrategy/BruteForceSearchStrategy.cs: Word boundaries
	can be white spaces or punctuation chars. Added new method 
	IsWordSeparator that checks both.

2004-12-11  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs: Added support for the already
	implemented Indent and UnIndent selection.

2004-12-10  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs:
	* Gui/SourceEditorBuffer.cs: Keys 'Home' and 'End' while having
	selected text now moves to Start/End of selection instead of Start/End
	of insertmark line.
	
2004-12-07  Alexandre Gomes <alexmipego@hotmail.com>
	
	* Gui/SourceEditorDisplayBinding.cs,
	* Gui/SourceEditorBuffer.cs: Added implementation for CommentCode and
	UncommentCode

2004-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Pads/CompilerMessageView.cs: Subscribe to service events using